fixed buttons size on mobile

--- a/style.css
+++ b/style.css
@@ -50,8 +50,6 @@ button {
   box-shadow: 2px 2px 2px rgb(45, 45, 45);
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
@@ -67,6 +65,13 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+@media(max-width:500px){
+  button {
+    height: 4rem;
+    width: 4rem;
+  }
 }
 
 #calculator{
